cambio mas simple en extras

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 			</td>
 			<td>
 			   <font color="grey">
-		        <input type="checkbox" name="extras" value="recetas" data-precio="1000">Recetas $1,000<br>
-				<input type="checkbox" name="extras" value="ejercicios" data-precio="1000">Ejercicios  $1,000<br>
-				<input type="checkbox" name="extras" value="revista" data-precio="150">Revista semanal $150<br>
+		        <input type="checkbox" name="recetas" value="1000">Recetas $1,000<br>
+				<input type="checkbox" name="ejercicios" value="1000">Ejercicios  $1,000<br>
+				<input type="checkbox" name="revista" value="150">Revista semanal $150<br>
                 </font>
 			</td>
 		</tr>	
@@ -63,8 +63,8 @@
           </tr>
           <tr>
             <td>
-				Nombre<input type="text" size="25"><br>
-			    Domicilio<input type="text" size="25"><br>
+				Nombre<input type="text" name="nombreCliente" size="25"><br>
+			    Domicilio<input type="text" name="domicilioCliente" size="25"><br>
 		   </td>
            <td>
 			  <select name="tipoPago" id="tipoPago">
